--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Main Start -->
     <div class="main">
         <!-- home Start -->
-        <section class="home-section align-item-center">
+        <section class="home-section align-item-center hidden">
             <div class="container">
                 <div class="row align-item-center">
                     <div class="home-text">
@@ -32,6 +32,43 @@
                 </div>
             </div>
         </section>  
+
+        <!-- About Section Start -->
+        <section class="about-section sec-padding">
+            <div class="container">
+                <div class="row">
+                    <div class="section-title">
+                        <h2>about me</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="about-img">
+                        <div class="about-box">
+                            <img src="img/about-me.png" alt="about img">
+                        </div>
+                    </div>
+                    <div class="about-text">
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste earum unde aliquam aperiam asperiores, nostrum culpa dicta dolorum itaque eius atque consectetur saepe cumque molestiae dolorem, modi a veniam exercitationem assumenda in. Fugit in, explicabo aliquam consequuntur reprehenderit, laboriosam sequi iusto nemo maxime aliquid cumque perferendis, delectus maiores. Sint, eligendi!</p>
+                        <h3>skills</h3>
+                        <div class="skills">
+                            <div class="skill-item">html</div>
+                            <div class="skill-item">css</div>
+                            <div class="skill-item">javascript</div>
+                            <div class="skill-item">Photoshop</div>
+                            <div class="skill-item">illustrator</div>
+                        </div>
+                        <div class="about-tabs">
+                            <button type="button" class="tab-item" data-target = "#education"> education</button>
+                            <button type="button" class="tab-item" data-target = "#experience">experience</button>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <!-- About Section End -->
+
+
     </div>
 </body>
 </html>
