--- a/index.html
+++ b/index.html
@@ -58,9 +58,56 @@
                             <div class="skill-item">illustrator</div>
                         </div>
                         <div class="about-tabs">
-                            <button type="button" class="tab-item" data-target = "#education"> education</button>
+                            <button type="button" class="tab-item active" data-target = "#education"> education</button>
                             <button type="button" class="tab-item" data-target = "#experience">experience</button>
                         </div>
+
+                        <!-- education start -->
+                        <div class="tab-content active" id="education">
+                            <div class="timeline">
+                                <div class="timeline-item">
+                                    <span class="date"> 2013 - 2016</span>
+                                <h4>Graphic Designer - <span>Arena DaNang</span></h4>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est, blanditiis.</p>
+                                </div>
+                                <div class="timeline-item">
+                                    <span class="date"> 2013 - 2016</span>
+                                <h4>Graphic Designer - <span>Arena DaNang</span></h4>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est, blanditiis.</p>
+                                </div>
+                                <div class="timeline-item">
+                                    <span class="date"> 2013 - 2016</span>
+                                <h4>Graphic Designer - <span>Arena DaNang</span></h4>
+                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est, blanditiis.</p>
+                                </div>  
+
+                            </div>
+                         </div>
+                        <!-- Education End -->
+                            <div class="tab-content" id="experience">
+                                <div class="timeline">
+                                    <div class="timeline-item">
+                                        <span class="date">2013-2016</span>
+                                        <h4>Web Developer <span>FPT SOftWare</span></h4>
+                                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab eaque atque, at excepturi dignissimos.</p>
+                                    </div>
+                                    <div class="timeline-item">
+                                        <span class="date">2013-2016</span>
+                                        <h4>Web Developer <span>FPT SOftWare</span></h4>
+                                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab eaque atque, at excepturi dignissimos.</p>
+                                    </div>
+                                    <div class="timeline-item">
+                                        <span class="date">2013-2016</span>
+                                        <h4>Web Developer <span>FPT SOftWare</span></h4>
+                                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab eaque atque, at excepturi dignissimos.</p>
+                                    </div>
+                                </div>
+
+                            </div>
+                        <!-- Experience Start -->
+
+                        <a href="#" class="btn">download cv</a>
+                        <a href="#" class="btn">contact me</a>
                     </div>
 
                 </div>
@@ -70,5 +117,8 @@
 
 
     </div>
+
+
+    <script src="apps/script.js"></script>
 </body>
 </html>
