--- a/index.html
+++ b/index.html
@@ -115,9 +115,116 @@
         </section>
         <!-- About Section End -->
 
+        <!-- Portfolio Section Start -->
+
+        <section class="portfolio-section sec-padding">
+            <div class="container">
+                <div class="row">
+                    <div class="section-title">
+                        <h2>recent work</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <!-- Portfolio iTem Start -->
+                    <div class="portfolio-item">
+                        <div class="portfolio-item-thumbnail">
+                            <img src="img/portfolio/1.jpg" alt="portfolio item thumb">
+                        </div>
+                        <h3 class="portfolio-item-title">education course website</h3>
+                    </div>
+                    <!-- Portfolio iTem End -->
+                    <!-- Portfolio iTem Start -->
+                    <div class="portfolio-item">
+                        <div class="portfolio-item-thumbnail">
+                            <img src="img/portfolio/2.jpg" alt="portfolio item thumb">
+                        </div>
+                        <h3 class="portfolio-item-title">education course website</h3>
+                    </div>
+                    <!-- Portfolio iTem End -->
+                    <!-- Portfolio iTem Start -->
+                    <div class="portfolio-item">
+                        <div class="portfolio-item-thumbnail">
+                            <img src="img/portfolio/3.jpg" alt="portfolio item thumb">
+                        </div>
+                        <h3 class="portfolio-item-title">education course website</h3>
+                    </div>
+                    <!-- Portfolio iTem End -->
+                    <!-- Portfolio iTem Start -->
+                    <div class="portfolio-item">
+                        <div class="portfolio-item-thumbnail">
+                            <img src="img/portfolio/4.jpg" alt="portfolio item thumb">
+                        </div>
+                        <h3 class="portfolio-item-title">education course website</h3>
+                    </div>
+                    <!-- Portfolio iTem End -->
+                    <!-- Portfolio iTem Start -->
+                    <div class="portfolio-item">
+                        <div class="portfolio-item-thumbnail">
+                            <img src="img/portfolio/5.jpg" alt="portfolio item thumb">
+                        </div>
+                        <h3 class="portfolio-item-title">education course website</h3>
+                    </div>
+                    <!-- Portfolio iTem End -->
+                    <!-- Portfolio iTem Start -->
+                    <div class="portfolio-item">
+                        <div class="portfolio-item-thumbnail">
+                            <img src="img/portfolio/6.jpg" alt="portfolio item thumb">
+                        </div>
+                        <h3 class="portfolio-item-title">education course website</h3>
+                    </div>
+                    <!-- Portfolio iTem End -->
+                    
+                    <button type ="button" class="btn view-project-btn">view project</button>
+                    <div class="profolio-item-details">
+                        <div class="description">
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde commodi pariatur officiis reiciendis accusantium! Dolore nobis corporis quibusdam explicabo adipisci?</p>
+                        </div>
+                        <div class="general-info">
+                            <ul>
+                                <li>Created - <span>4 Dec 2009</span></li>
+                                <li>Technologies used - <span>html,css</span></li>
+                                <li>Role - <span>front</span></li>
+                                <li>view Online -  <span><a href="#" target="_blank">www.domain.com</a></span></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Portfolio Section End -->
+
+        
+
 
     </div>
+    <!-- Main End -->
 
+    <!-- PortFolio Item Details Popup Start -->
+    <div class="portfolio-poup">
+        <div class="pp-inner">
+            <div class="pp-content">
+                <div class="pp-header">
+                    <div class="pp-thumbnail">
+                        <img src="img/portfolio/3.jpg" alt="pp-thumbnail">
+                    </div>
+                    <h3>App Landing Page</h3>
+                </div>
+                <div class="pp-body">
+                    <div class="description">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Unde commodi pariatur officiis reiciendis accusantium! Dolore nobis corporis quibusdam explicabo adipisci?</p>
+                    </div>
+                    <div class="general-info">
+                        <ul>
+                            <li>Created - <span>4 Dec 2009</span></li>
+                            <li>Technologies used - <span>html,css</span></li>
+                            <li>Role - <span>front</span></li>
+                            <li>view Online -  <span><a href="#" target="_blank">www.domain.com</a></span></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <script src="apps/script.js"></script>
 </body>
