--- a/index.html
+++ b/index.html
@@ -4,42 +4,47 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
+    <title>Portfolio Website</title>
+    <link rel="icon" type="image/png" href="favicon.png" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <script type="text/javascript" nonce="f9fb58781087434098e7a71ef7f" src="//local.adguard.org?ts=1626427514536&amp;type=content-script&amp;dmn=cdn.fbsbx.com&amp;app=com.brave.Browser.helper&amp;css=1&amp;js=1&amp;gcss=1&amp;rel=1&amp;rji=1&amp;sbe=0"></script>
 <script type="text/javascript" nonce="f9fb58781087434098e7a71ef7f" src="//local.adguard.org?ts=1626427514536&amp;name=Web%20of%20Trust&amp;name=AdGuard%20Extra&amp;type=user-script"></script><link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
- 
 
+    <!-- Background Circles Start -->
 
-     <!-- Header End -->
-    <div class="main">
-
-           <!-- Main Start -->
-    <header class="header">
-        <div class="container">
-            <div class="row flex-end">
-                <button type="button" class="nav-toggler">
-                    <span></span>
-                </button>
-                <nav class="nav">
-                    <div class="nav-inner">
-                        <ul>
-                            <li><a href="#home" class="nav-item link-item">home</a></li>
-                            <li><a href="#about" class="nav-item link-item">about</a></li>
-                            <li><a href="#portfolio" class="nav-item link-item">portfolio</a></li>
-                            <li><a href="#contact" class="nav-item link-item">contact</a></li>
-                        </ul>
-                    </div>
-                </nav>
-            </div>
+        <div class="bg-circles">
+            <div class="circle-1"> </div>
+            <div class="circle-2"> </div>
+            <div class="circle-3"> </div>
+            <div class="circle-4"> </div>
+            <div class="circle-5"> </div>
         </div>
-    </header>
-
-     <!-- Header Start -->
+    <!-- Background Circles End -->
+     <!-- Main Start -->
+    <div class="main">
+        <!-- Header Start -->
+        <header class="header">
+            <div class="container">
+                <div class="row flex-end">
+                    <button type="button" class="nav-toggler">
+                        <span></span>
+                    </button>
+                    <nav class="nav">
+                        <div class="nav-inner">
+                            <ul>
+                                <li><a href="#home" class="nav-item link-item">home</a></li>
+                                <li><a href="#about" class="nav-item link-item">about</a></li>
+                                <li><a href="#portfolio" class="nav-item link-item">portfolio</a></li>
+                                <li><a href="#contact" class="nav-item link-item">contact</a></li>
+                            </ul>
+                        </div>
+                    </nav>
+                </div>
+            </div>
+        </header>
+        <!-- Header End -->
         <!-- home Start -->
         <section class="home-section align-item-center active" id="home">
             <div class="container">
@@ -158,7 +163,7 @@
                         <div class="portfolio-item-thumbnail">
                             <img src="img/portfolio/1.jpg" alt="portfolio item thumb">
                         </div>
-                        <h3 class="portfolio-item-title">education course website</h3>
+                        <h3 class="portfolio-item-title">Portfolio Website</h3>
                         <button type ="button" class="btn view-project-btn">view project</button>
                     <div class="portfolio-item-details">
                         <div class="description">
@@ -180,7 +185,7 @@
                         <div class="portfolio-item-thumbnail">
                             <img src="img/portfolio/2.jpg" alt="portfolio item thumb">
                         </div>
-                        <h3 class="portfolio-item-title">education course website</h3>
+                        <h3 class="portfolio-item-title">Love House Website</h3>
                         <button type ="button" class="btn view-project-btn">view project</button>
                     <div class="portfolio-item-details">
                         <div class="description">
@@ -202,7 +207,7 @@
                         <div class="portfolio-item-thumbnail">
                             <img src="img/portfolio/3.jpg" alt="portfolio item thumb">
                         </div>
-                        <h3 class="portfolio-item-title">education course website</h3>
+                        <h3 class="portfolio-item-title">Love Furniture Website</h3>
                         <button type ="button" class="btn view-project-btn">view project</button>
                     <div class="portfolio-item-details">
                         <div class="description">
@@ -222,9 +227,9 @@
                     <!-- Portfolio iTem Start -->
                     <div class="portfolio-item">
                         <div class="portfolio-item-thumbnail">
-                            <img src="img/portfolio/4.jpg" alt="portfolio item thumb">
+                            <img src="img/portfolio/3.jpg" alt="portfolio item thumb">
                         </div>
-                        <h3 class="portfolio-item-title">education course website</h3>
+                        <h3 class="portfolio-item-title">Love Furniture Website</h3>
                         <button type ="button" class="btn view-project-btn">view project</button>
                     <div class="portfolio-item-details">
                         <div class="description">
@@ -244,9 +249,9 @@
                     <!-- Portfolio iTem Start -->
                     <div class="portfolio-item">
                         <div class="portfolio-item-thumbnail">
-                            <img src="img/portfolio/5.jpg" alt="portfolio item thumb">
+                            <img src="img/portfolio/2.jpg" alt="portfolio item thumb">
                         </div>
-                        <h3 class="portfolio-item-title">education course website</h3>
+                        <h3 class="portfolio-item-title">Love House Website</h3>
                         <button type ="button" class="btn view-project-btn">view project</button>
                     <div class="portfolio-item-details">
                         <div class="description">
@@ -266,9 +271,9 @@
                     <!-- Portfolio iTem Start -->
                     <div class="portfolio-item">
                         <div class="portfolio-item-thumbnail">
-                            <img src="img/portfolio/6.jpg" alt="portfolio item thumb">
+                            <img src="img/portfolio/1.jpg" alt="portfolio item thumb">
                         </div>
-                        <h3 class="portfolio-item-title">education course website</h3>
+                        <h3 class="portfolio-item-title">Portfolio Website</h3>
                         <button type ="button" class="btn view-project-btn">view project</button>
                     <div class="portfolio-item-details">
                         <div class="description">
