--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         </header>
         <!-- Header End -->
         <!-- home Start -->
-        <section class="home-section align-item-center active" id="home">
+        <section class="home-section align-item-center" id="home">
             <div class="container">
                 <div class="row align-item-center">
                     <div class="home-text">
@@ -67,7 +67,7 @@
         </section>  
 
         <!-- About Section Start -->
-        <section class="about-section sec-padding active" id="about">
+        <section class="about-section sec-padding" id="about">
             <div class="container">
                 <div class="row">
                     <div class="section-title">
@@ -150,7 +150,7 @@
 
         <!-- Portfolio Section Start -->
 
-        <section class="portfolio-section sec-padding active" id="portfolio">
+        <section class="portfolio-section sec-padding" id="portfolio">
             <div class="container">
                 <div class="row">
                     <div class="section-title">
@@ -299,7 +299,7 @@
 
         <!-- Contact section Start-->
 
-        <section class="contact-section sec-padding active" id="contact">
+        <section class="contact-section sec-padding" id="contact">
             <div class="container">
                 <div class="row">
                     <div class="section-title">
