--- a/index.html
+++ b/index.html
@@ -99,18 +99,18 @@
                         <div class="tab-content active" id="education">
                             <div class="timeline">
                                 <div class="timeline-item">
-                                    <span class="date"> 2013 - 2016</span>
-                                <h4>Graphic Designer - <span>Arena DaNang</span></h4>
+                                    <span class="date"> 2014 - 2016</span>
+                                <h4>Graphic Designer - <span>ARENA DA NANG 専門学校</span></h4>
                                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est, blanditiis.</p>
                                 </div>
                                 <div class="timeline-item">
-                                    <span class="date"> 2013 - 2016</span>
-                                <h4>Graphic Designer - <span>Arena DaNang</span></h4>
+                                    <span class="date"> 2018 - 2020</span>
+                                <h4>日本語 - <span>東京日本語学校 長沼スクール</span></h4>
                                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est, blanditiis.</p>
                                 </div>
                                 <div class="timeline-item">
-                                    <span class="date"> 2013 - 2016</span>
-                                <h4>Graphic Designer - <span>Arena DaNang</span></h4>
+                                    <span class="date"> 2020 - 2022</span>
+                                <h4>アプリ・Web制作 - <span>早稲田文理専門学校</span></h4>
                                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est, blanditiis.</p>
                                 </div>  
 
