--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                             <div class="timeline">
                                 <div class="timeline-item">
                                     <span class="date"> 2014 - 2016</span>
-                                <h4>Graphic Designer - <span>ARENA DA NANG 専門学校</span></h4>
+                                <h4>グラフィックデザイナー<span>ARENA DA NANG 専門学校</span></h4>
                                 <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est, blanditiis.</p>
                                 </div>
                                 <div class="timeline-item">
@@ -120,19 +120,25 @@
                             <div class="tab-content" id="experience">
                                 <div class="timeline">
                                     <div class="timeline-item">
-                                        <span class="date">2013-2016</span>
-                                        <h4>Web Developer <span>FPT SOftWare</span></h4>
-                                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab eaque atque, at excepturi dignissimos.</p>
+                                        <span class="date">2015/4</span>
+                                        <h4>iSHOP DA NANG  <span>入社</span></h4>
+                                        <p>社内のバナー広告、ポスターなど
+                                            デザインを担当し、広告イベントの提案を行う。
+                                            </p>
+                                    </div>
+                                    <div class="timeline-item">
+                                        <span class="date">2016/4</span>
+                                        <h4>PHO NUI レストラン<span>フリランス</span></h4>
+                                        <p>バナー広告、ポスターなど
+                                            デザインを担当する。
+                                            </p>
                                     </div>
                                     <div class="timeline-item">
                                         <span class="date">2013-2016</span>
-                                        <h4>Web Developer <span>FPT SOftWare</span></h4>
-                                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab eaque atque, at excepturi dignissimos.</p>
-                                    </div>
-                                    <div class="timeline-item">
-                                        <span class="date">2013-2016</span>
-                                        <h4>Web Developer <span>FPT SOftWare</span></h4>
-                                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Obcaecati ab eaque atque, at excepturi dignissimos.</p>
+                                        <h4>PAPASTEAK レストラン<span>フリランス</span></h4>
+                                        <p>バナー広告、ポスターなど
+                                            デザインを担当し、オンラインマーケティングの提案を行う。
+                                            </p>
                                     </div>
                                 </div>
 
