--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
                         </div>
                     </div>
                     <div class="about-text">
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Iste earum unde aliquam aperiam asperiores, nostrum culpa dicta dolorum itaque eius atque consectetur saepe cumque molestiae dolorem, modi a veniam exercitationem assumenda in. Fugit in, explicabo aliquam consequuntur reprehenderit, laboriosam sequi iusto nemo maxime aliquid cumque perferendis, delectus maiores. Sint, eligendi!</p>
+                        <p>高校を卒業してから、２年間専門学校でグラフィックデザインを勉強しました。その２年間の間、レストランやIT会社などでグラフィックデザインナーとしてフリランスをしました。卒業の後、iSHOPという会社でバナー広告、ポスター、などをデザインなーとして仕事を１年間担当しました。デザインではなくコーディングも勉強したいので、日本へ留学することにしました。現在、HTML5,CSS3,SASS,JAVASCRIPTなど勉強しながら、自分のポートフォリオサイトを制作しました。これから、フロントエンドエンジニアになりたいので、これからReactJsも身につけようと思います。
+                            今学校の授業以外,インターネットでWEBのコースを購入し、自習しています。
+                            様々なサイトから最先端の技術やトレンドをキャッチアップしたりしています
+                            </p>
                         <h3>skills</h3>
                         <div class="skills">
                             <div class="skill-item">html</div>
@@ -145,7 +148,7 @@
                             </div>
                         <!-- Experience Start -->
 
-                        <a href="cv.pdf" b class="btn">download cv</a>
+                        <a href="PHAN_NGOC_VU_FRONTEND.pdf" class="btn">download cv</a>
                         <a href="#contact" class="btn link-item">contact me</a>
                     </div>
 
