--- a/index.html
+++ b/index.html
@@ -280,9 +280,9 @@
                     <!-- Portfolio iTem Start -->
                     <div class="portfolio-item">
                         <div class="portfolio-item-thumbnail">
-                            <img src="img/portfolio/1.jpg" alt="portfolio item thumb">
+                            <img src="img/portfolio/4.jpg" alt="portfolio item thumb">
                         </div>
-                        <h3 class="portfolio-item-title">Portfolio Website</h3>
+                        <h3 class="portfolio-item-title">Udemy Website</h3>
                         <button type ="button" class="btn view-project-btn">view project</button>
                     <div class="portfolio-item-details">
                         <div class="description">
