--- a/index.html
+++ b/index.html
@@ -81,9 +81,14 @@
                         </div>
                     </div>
                     <div class="about-text">
-                        <p>高校を卒業してから、２年間専門学校でグラフィックデザインを勉強しました。その２年間の間、レストランやIT会社などでグラフィックデザインナーとしてフリランスをしました。卒業の後、iSHOPという会社でバナー広告、ポスター、などをデザインなーとして仕事を１年間担当しました。デザインではなくコーディングも勉強したいので、日本へ留学することにしました。現在、HTML5,CSS3,SASS,JAVASCRIPTなど勉強しながら、自分のポートフォリオサイトを制作しました。これから、フロントエンドエンジニアになりたいので、これからReactJsも身につけようと思います。
-                            今学校の授業以外,インターネットでWEBのコースを購入し、自習しています。
-                            様々なサイトから最先端の技術やトレンドをキャッチアップしたりしています
+                        <p>私は早稲田文理専門学校のアプリーウェブ制作学科のファンゴックブーと申します。
+ベトナムのフエから参りました。。フエは日本でいうと京都のような町でとても人気のある観光地です
+高校を卒業した後、ベトナム でデザインの専門学校に入り,デザインの専門知識を学びました。
+１年間グラフィックデザイナーとして、就職しました。
+仕事をするうちに、もっと技術を高めたいと思い日本に留学しました
+趣味はヨーロッパの景色の写真やビデオをみることです
+よろしくお願いします。
+
                             </p>
                         <h3>skills</h3>
                         <div class="skills">
